--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="ccJKkYBU3PobBXtGDKsh7fP3MtIDEOVqk2ghiDyh5hs" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Earn ₹200 Sign‑Up Bonus on Probo – Referral Code QP7X1M</title>
