--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
   <div class="container text-center">
     <small>&copy; 2025 Probo Referral Landing. All rights reserved.</small>
   </div>
+<a href="https://linkmix.co/38782706" target="_blank">All Tiranga & Probo Referral Links – Linkmix Collection</a>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
